--- a/unishare-backend/package.json
+++ b/unishare-backend/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.0",
     "multer": "^1.4.5-lts.2",
